fixed some small details on header and styled the scrollbar

--- a/product.css
+++ b/product.css
@@ -88,7 +88,6 @@ label:after {
 
 nav {
 	z-index: 1;
-    position: absolute;
     top: -1000px;
 	right: 0px;
     width: 100vw;
