--- a/style.css
+++ b/style.css
@@ -23,8 +23,28 @@
     src: url(fonts/Itim-Regular.ttf);
 }
 
+::-webkit-scrollbar {
+	width: 10px;
+	border: 1px solid #D19B2A;
+	border-radius: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px #E0C79A;
+	border-radius: 10px;
+
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+	background: #D19B2A;
+	border-radius: 10px;
+  }
 
 header {
+	position: fixed;
+	width: 100%;
 	background-color: white;
 	height: 14em;
 	display: grid;
@@ -86,7 +106,6 @@ nav {
 
 
 nav h1 {
-	position: absolute;
 	top: -20px;
 	width: 100vw;
 	background-color: #E0C79A;
@@ -100,6 +119,8 @@ nav h1 {
 	color: white;
 	text-shadow: 1px 1px 1px #415257;
 }
+
+
 
 #toggle:checked ~ nav {
     top: 0px;
@@ -142,6 +163,10 @@ header ul li a {
 
 }
 
+header ul li a:hover {
+	color: white;
+}
+
 
 header p {
 	width: 308px;
@@ -175,6 +200,7 @@ main {
 	background-color: #F6EFE2;
 	display: flex;
 	flex-direction: column;
+	padding-top: 14em;
 }
 
 main a{
